# HyprKolovrat

./: README.md  hyprlock.conf  hyprpaper.conf  hyprshot-gui  install.sh
dunst/: dunstrc
hypr_hyprlang/: change_workspace.sh  hyprland.conf  hyprlock.conf  move_to_workspace.sh
hypr_hyprlang/conf/: autostart.conf  binds.conf  env.conf  general.conf  program_var.conf  window_rule.conf
hypr_lua/: .kateproject  hypr_lua  hyprland.lua  hyprpaper.conf
hypr_lua/conf/: apps.lua  autostart.lua  binds.lua  device.lua  env.lua  look.lua  monitors.lua  window_rule.lua
minecur/cursors/: .gitignore  default  help  index.theme  left_ptr_watch  not-allowed  wait
quickshell/: .kateproject  Bar.qml  shell.qml
quickshell/modules/: ActiveWindow.qml  BaseButton.qml  BaseText.qml  Clock.qml  Colovrat.qml  Cpu.qml  Gpu.qml  KeyboardLayout.qml  Mic.qml  Player.qml  Ram.qml  Separator.qml  Sound.qml  Theme.qml  Tooltip.qml  Tray.qml  VolumeSlider.qml  WinCalendar.qml  WinPlayer.qml  Workspaces.qml
quickshell/modules/colovrat/: .gitignore  colovrat.cpp
quickshell/modules/cpu_parcer/: .clang-format  CMakeLists.txt  compile_commands.json  cpu_parcer  cpu_parcer.cpp
waybar/: config.jsonc  modules.jsonc  restart_waybar.sh  style.css
waybar/modules/: .gitignore  audio.jsonc  clock.jsonc  cpu.jsonc  gpu.jsonc  keyboard.jsonc  memory.jsonc  pusk.cpp  pusk.jsonc  pusk2.cpp  pusk_anim.sh  start_pusk.sh  workspace.jsonc
wofi/: config  style.css
